# APIAnyware-MacOS

./: .gitignore  .observational-memory.yml  CLAUDE.md  Cargo.toml  README.md  TODO.md
.claude/commands/: analyze.md
.claude/skills/: add-app.md  add-target.md
LLM_CONTEXT/: coding-style.md  index.md  project-workflow.md
LLM_STATE/: new-language-guide.md  overview.md  plan-racket.md  plan.md  project-workflow.md
LLM_STATE/core/: backlog.md  backlog.yaml  latest-session.md  memory.md  memory.yaml  plan.md  pre-work.sh  prompt-compact.md  prompt-reflect.md  prompt-triage.md  prompt-work.md  run.sh  session-log.md  session-log.yaml  work-baseline
LLM_STATE/plans/: plan-template.md
LLM_STATE/targets/: template.md
analysis/crates/annotate/: Cargo.toml
analysis/crates/annotate/src/: heuristics.rs  lib.rs  llm.rs  pattern_detection.rs  validate.rs
analysis/crates/cli/: Cargo.toml
analysis/crates/cli/src/: main.rs
analysis/crates/datalog/: Cargo.toml
analysis/crates/datalog/src/: lib.rs  loading.rs  ownership.rs
analysis/crates/enrich/: Cargo.toml
analysis/crates/enrich/src/: checkpoint.rs  fact_loader.rs  lib.rs  program.rs
analysis/crates/enrich/tests/: enrichment_rules.rs
analysis/crates/resolve/: Cargo.toml
analysis/crates/resolve/src/: checkpoint.rs  fact_loader.rs  lib.rs  program.rs
analysis/crates/resolve/tests/: resolution_rules.rs  synthetic_resolution.rs
analysis/docs/: annotation-workflow.md  api-pattern-catalog.md  enrich-rules.md  memory-architecture.md
analysis/scripts/: config.example.toml  llm-annotate-subagent.md  llm-annotate.sh  prompt-template.md  regenerate-stale-pipeline.sh
collection/crates/cli/: Cargo.toml
collection/crates/cli/src/: main.rs
collection/crates/extract-objc/: Cargo.toml
collection/crates/extract-objc/src/: extract_declarations.rs  extractor.rs  lib.rs  sdk.rs  type_mapping.rs
collection/crates/extract-objc/synthetic-frameworks/libdispatch/: libdispatch.h
collection/crates/extract-objc/tests/: extract_applicationservices.rs  extract_audiotoolbox.rs  extract_coregraphics.rs  extract_foundation.rs  filter_internal_linkage.rs  filter_platform_unavailable.rs  sdk_discovery.rs
collection/crates/extract-swift/: Cargo.toml
collection/crates/extract-swift/src/: abi_types.rs  declaration_mapping.rs  digester.rs  lib.rs  merge.rs  type_mapping.rs
collection/crates/extract-swift/tests/: declaration_mapping.rs  extract_coretext.rs  extract_network.rs  parse_abi.rs  swift_module_discovery.rs
collection/crates/extract-swift/tests/fixtures/: observation_abi.json  test_framework_abi.json
collection/crates/types/: Cargo.toml
collection/crates/types/src/: annotation.rs  enrichment.rs  ir.rs  lib.rs  provenance.rs  serde_helpers.rs  skipped_symbol_reason.rs  type_ref.rs
collection/crates/types/tests/: annotation_roundtrip.rs  deserialize_ir.rs  function_pointer_roundtrip.rs
generation/crates/bundle-racket-oo/: Cargo.toml
generation/crates/bundle-racket-oo/examples/: bundle_app.rs
generation/crates/bundle-racket-oo/src/: bundle.rs  deps.rs  lib.rs  spec.rs
generation/crates/bundle-racket-oo/tests/: bundle_file_lister.rs  info_plist_overrides.rs  signing_identity.rs
generation/crates/cli/: Cargo.toml
generation/crates/cli/src/: generate.rs  main.rs  registry.rs
generation/crates/emit/: Cargo.toml
generation/crates/emit-racket/: Cargo.toml
generation/crates/emit-racket-functional/: Cargo.toml
generation/crates/emit-racket-functional/src/: lib.rs
generation/crates/emit-racket-oo/: Cargo.toml
generation/crates/emit-racket-oo/src/: emit_class.rs  emit_constants.rs  emit_framework.rs  emit_functions.rs  emit_protocol.rs  lib.rs  naming.rs  shared_signatures.rs
generation/crates/emit-racket-oo/tests/: runtime_load_test.rs  snapshot_test.rs
generation/crates/emit-racket-oo/tests/golden-appkit/oo/: constants.rkt  enums.rkt  main.rkt  nsapplication.rkt  nsbutton.rkt  nscolor.rkt  nscontrol.rkt  nsimage.rkt  nsmenu.rkt  nsmenuitem.rkt  nsresponder.rkt  nssplitview.rkt  nsstackview.rkt  nsstatusbar.rkt  nstableview.rkt  nstextfield.rkt  nstextview.rkt  nsview.rkt  nswindow.rkt  nswindowcontroller.rkt
generation/crates/emit-racket-oo/tests/golden-appkit/oo/protocols/: nstableviewdatasource.rkt  nstableviewdelegate.rkt  nswindowdelegate.rkt
generation/crates/emit-racket-oo/tests/golden-foundation/oo/: constants.rkt  enums.rkt  main.rkt  nsarray.rkt  nsdata.rkt  nsdateformatter.rkt  nserror.rkt  nsfilemanager.rkt  nslock.rkt  nsnotificationcenter.rkt  nsobject.rkt  nsstring.rkt  nstimer.rkt  nsurl.rkt  nsuserdefaults.rkt
generation/crates/emit-racket-oo/tests/golden-foundation/oo/protocols/: nscoding.rkt  nscopying.rkt  nslocking.rkt
generation/crates/emit-racket-oo/tests/golden/oo/: constants.rkt  functions.rkt  main.rkt  tkbutton.rkt  tkhelper.rkt  tkmanager.rkt  tkobject.rkt  tkview.rkt
generation/crates/emit-racket-oo/tests/golden/oo/protocols/: tkcopying.rkt  tkdelegate.rkt
generation/crates/emit-racket/src/: emit_class.rs  emit_enums.rs  emit_framework.rs  emit_protocol.rs  lib.rs  method_filter.rs  naming.rs  shared_signatures.rs
generation/crates/emit-racket/tests/: snapshot_test.rs
generation/crates/emit-racket/tests/golden-foundation/oo/: constants.rkt  main.rkt  nsarray.rkt  nsdateformatter.rkt  nserror.rkt  nslock.rkt  nsnotificationcenter.rkt  nsobject.rkt  nsstring.rkt  nsurl.rkt  nsuserdefaults.rkt
generation/crates/emit-racket/tests/golden-foundation/oo/protocols/: nscoding.rkt  nscopying.rkt
generation/crates/emit-racket/tests/golden/oo/: enums.rkt  tkobject.rkt
generation/crates/emit-racket/tests/golden/oo/protocols/: tkcopying.rkt
generation/crates/emit/src/: binding_style.rs  code_writer.rs  doc_rendering.rs  ffi_type_mapping.rs  framework_ordering.rs  lib.rs  naming.rs  pattern_dispatch.rs  snapshot_testing.rs  test_fixtures.rs
generation/crates/stub-launcher/: Cargo.toml
generation/crates/stub-launcher/src/: bundle.rs  codesign.rs  generate.rs  lib.rs
knowledge/: CLAUDE.md  README.md
swift/: Package.swift
website/: index.md  meta.yml
(+151 files in other folders)
