[workspace]
resolver = "2"
members = [
    # Shared types
    "collection/crates/types",
    # Collection phase
    "collection/crates/extract-objc",
    "collection/crates/extract-swift",
    "collection/crates/cli",
    # Analysis phase
    "analysis/crates/datalog",
    "analysis/crates/resolve",
    "analysis/crates/annotate",
    "analysis/crates/enrich",
    "analysis/crates/cli",
    # Generation phase
    "generation/crates/emit",
    "generation/crates/emit-racket-oo",
    "generation/crates/cli",
    # "generation/crates/emit-chez",
    # "generation/crates/emit-gerbil",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ascent = "0.7"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clang = { version = "2", features = ["clang_10_0", "runtime"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Internal crates
apianyware-macos-types = { path = "collection/crates/types" }
apianyware-macos-extract-objc = { path = "collection/crates/extract-objc" }
apianyware-macos-extract-swift = { path = "collection/crates/extract-swift" }
apianyware-macos-datalog = { path = "analysis/crates/datalog" }
apianyware-macos-resolve = { path = "analysis/crates/resolve" }
apianyware-macos-annotate = { path = "analysis/crates/annotate" }
apianyware-macos-enrich = { path = "analysis/crates/enrich" }
apianyware-macos-emit = { path = "generation/crates/emit" }
apianyware-macos-emit-racket-oo = { path = "generation/crates/emit-racket-oo" }

[workspace.lints.rust]
unsafe_code = "warn"
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = "warn"
