[package]
name = "apianyware-macos-annotate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Heuristic annotation classification and LLM annotation merge"

[dependencies]
apianyware-macos-types.workspace = true
apianyware-macos-datalog.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
