[package]
name = "apianyware-macos-analyze"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI: apianyware-macos-analyze — resolve, annotate, enrich pipeline"

[dependencies]
apianyware-macos-types.workspace = true
apianyware-macos-resolve.workspace = true
apianyware-macos-annotate.workspace = true
apianyware-macos-enrich.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
