[package]
name = "apianyware-macos-datalog"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared Datalog base relations, fact loaders, and types for resolve and enrich phases"

[dependencies]
apianyware-macos-types.workspace = true
ascent.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
