[package]
name = "apianyware-macos-extract-objc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ObjC/C API extraction from macOS SDK headers via libclang"

[dependencies]
apianyware-macos-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
clang.workspace = true
chrono.workspace = true

[lints]
workspace = true
