[package]
name = "apianyware-macos-extract-swift"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Swift API extraction via swift-api-digester"

[dependencies]
apianyware-macos-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
