[package]
name = "apianyware-macos-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared IR types, annotation schema, and checkpoint file format for macOS API bindings"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
