[package]
name = "apianyware-macos-bundle-racket-oo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bundle racket-oo sample apps into macOS .app bundles via stub-launcher"

[dependencies]
apianyware-macos-stub-launcher.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
