[package]
name = "apianyware-macos-generate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI: apianyware-macos-generate — generate language bindings from enriched IR"

[dependencies]
apianyware-macos-types.workspace = true
apianyware-macos-datalog.workspace = true
apianyware-macos-emit.workspace = true
apianyware-macos-emit-racket-oo.workspace = true
apianyware-macos-emit-racket-functional.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true

[lints]
workspace = true
