[package]
name = "apianyware-macos-emit-racket-functional"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Racket functional code generation: plain procedures, explicit objc_msgSend (stub)"

[dependencies]
apianyware-macos-types.workspace = true
apianyware-macos-emit.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
