[package]
name = "apianyware-macos-emit-racket"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Racket code generation: class bindings, protocol delegates, enums, constants"

[dependencies]
apianyware-macos-types.workspace = true
apianyware-macos-emit.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
