[package]
name = "apianyware-macos-emit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared emitter framework: naming utilities, FFI type mapping, code writer, framework ordering, doc rendering, binding style abstractions"

[dependencies]
apianyware-macos-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
